--- a/src/app/alumno/alumno-list/alumno-list.page.html
+++ b/src/app/alumno/alumno-list/alumno-list.page.html
@@ -1,14 +1,8 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Alumnos</ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)="nuevo()">
-        <ion-icon name="add"></ion-icon>
-        Nuevo
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+<ion-fab slot="fixed" vertical="bottom" horizontal="end">
+  <ion-fab-button (click)="nuevo()">
+    <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
 
 <ion-content [fullscreen]="true">
 
@@ -42,9 +36,8 @@
             BORRAR
           </ion-item-option>
         </ion-item-options>
+
       </ion-item-sliding>
     </ion-row>
-
   </ion-grid>
-
 </ion-content>
