--- a/src/app/alumno/alumno-list/alumno-list.page.html
+++ b/src/app/alumno/alumno-list/alumno-list.page.html
@@ -1,3 +1,17 @@
+<ion-header [translucent]="true">
+  <ion-toolbar *ngIf="!isSearch">
+    <ion-title>Listado Alumnos</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button (click)="clickSearch()">
+        <ion-icon slot="end" name="search"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <ion-toolbar *ngIf="isSearch">
+    <ion-searchbar show-cancel-button="always" show-clear-button="always" (ionClear)="clearSearch()" (ionChange)="buscarSearch($event)"></ion-searchbar>
+  </ion-toolbar> 
+ </ion-header>
+
 <ion-fab slot="fixed" vertical="bottom" horizontal="end">
   <ion-fab-button (click)="nuevo()">
     <ion-icon name="add"></ion-icon>
@@ -5,10 +19,8 @@
 </ion-fab>
 
 <ion-content [fullscreen]="true">
-
   <ion-grid>
     <ion-row>
-
       <ion-col><strong>Documento</strong></ion-col>
       <ion-col><strong>Nombre</strong></ion-col>
       <ion-col><strong>Apellido</strong></ion-col>
